--- a/_tabs/blog.html
+++ b/_tabs/blog.html
@@ -264,8 +264,8 @@
                 <div id="image03" class="style3 image" data-position="center">
                   <span class="frame"
                     ><img
-                      src="https://github.com/yusufadell/curioqz/blob/main/assets/landing.png?raw=true"
-                      alt=""
+                      src="https://cdn.dribbble.com/users/1690831/screenshots/15904556/media/bc113fc3cbfab38acb5c3e3e2a9bdfc4.png?compress=1&resize=1000x750&vertical=top"
+                      alt="curioz logo"
                   /></span>
                 </div>
                 <ul id="buttons01" class="style1 buttons">
